# zscroll

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  .travis.yml  Changelog.org  Makefile  PKGBUILD  README.org  __init__.py  pyproject.toml  setup.py  shell.nix  test_zscroll.py  zscroll  zscroll.1
.github/workflows/: test.yml
completion/: _zscroll
tests/: __init__.py
tests/integration/: __init__.py  test_zscroll.py
tests/unit/: __init__.py  test_util.py
zscroll/: __init__.py  main.py  models.py  util.py
