[tool.black]
# this is the default
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  |  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# black compatible settings
# https://github.com/timothycrosley/isort/issues/694
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pydocstyle]
match = "(.*\\.py|zscroll)"

[tool.poetry]
name = "zscroll"
version = "2.0.1"
description = "A text scroller for panels or terminals"
authors = ["Fox Kiester <noct@posteo.net>"]
license = "GPL-3.0-only"
readme = "README.org"
repository = "https://github.com/noctuid/zscroll"
keywords = ["bar", "panel", "text", "scroll", "scroller"]

packages = [
    { include = "zscroll" },
]

# no way to specify data_files
# https://github.com/python-poetry/poetry/issues/890

# doesn't work
# [tool.poetry.scripts]
# zscroll = "zscroll:main"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
flake8 = "^3.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pycodestyle = "^2.7.0"
pyflakes = "^2.3.1"
mccabe = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
